扩充接口请求类、加密方法

--- a/static/secret/sm2.html
+++ b/static/secret/sm2.html
@@ -10592,13 +10592,29 @@ code.google.com/p/crypto-js/wiki/License
 
     </script>
     <script>
-        var sm2=new Sm2Utils();
-        function  sm3AndSm2EncryptRP(pubKeyHex, sec_p, split) {
-            return this.sm2.encrypt(pubKeyHex, sec_p);
+        var SM2=new Sm2Utils();
+        function  sm2Encrypt(pubKeyHex, sec_p, split) {
+            return SM2.encrypt( sec_p,pubKeyHex);
             // return sec_p_sm2_sm3_random_plain;
         }
 
-        console.log(sm3AndSm2EncryptRP('a','b','c'));
+        function sm3AndSm2EncryptRP  (pubKeyHex, sec_p, split) {
+            var split_ = arguments.length === 2 ? "|" : split == null ? "|" : split;
+            var sec_p_sm3_random_plain =
+                Sm3Utils.encrypt(sec_p) +
+                split_ +
+                SM2.randomWord(8) +
+                split_ +
+                sec_p;
+            var sec_p_sm2_sm3_random_plain = '{crypto}'+SM2.encrypt(
+                sec_p_sm3_random_plain,
+                pubKeyHex
+            );
+            // return sec_p_sm3_random_plain;
+            return sec_p_sm2_sm3_random_plain;
+        }
+
+
     </script>
 </head>
 <body>
